Standardize path parameter @route tag
