# docs/swagger.json
@@ -87,7 +87,7 @@
                 }
             }
         },
-        "/api/v1/products/:id": {
+        "/api/v1/products/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -303,7 +303,7 @@
                 }
             }
         },
-        "/api/v1/sections/:id": {
+        "/api/v1/sections/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
